cmd/global-static/nodebalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: fridayy-nodebalancer-dep
  annotations:
    service.beta.kubernetes.io/linode-loadbalancer-default-protocol: http
    service.beta.kubernetes.io/linode-loadbalancer-port-443: '{ "tls-secret-name": "nb-secret", "protocol": "https" }'
    # example of 2nd setup, maybe for testing
    service.beta.kubernetes.io/linode-loadbalancer-port-8443: '{ "tls-secret-name": "example-secret-staging", "protocol": "https" }'
spec:
  type: LoadBalancer   
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
